--- a/templates/errormessage.html
+++ b/templates/errormessage.html
@@ -1,11 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="h-100" data-bs-theme="dark">
+
 <head>
-    <meta charset="UTF-8">
-    <title>error</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="" />
+  <meta name="theme-color" content="#712cf9" />
+
+  <title>Error</title>
+  <link href="/static/bootstrap.min.css" rel="stylesheet" />
+  <link href="/static/cover.css" rel="stylesheet" />
 </head>
-<body>
-<h1>{{error}}</h1>
-<p>{{message}}</p>
+
+<body class="d-flex h-100 text-center text-bg-dark text-danger">
+  <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto"></header>
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+      aria-labelledby="staticBackdropLabel" aria-hidden="false">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">{{error}}</h1>
+          </div>
+          <div class="modal-body">
+            {{message}}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" onclick="window.location.href='/'">Go Back Home</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer class="mt-auto text-white-50">
+      <p>ShuttleQ</p>
+    </footer>
+  </div>
+
+  <script src="/static/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>
+  <script>
+    window.onload = function () {
+      const myModal = new bootstrap.Modal(document.getElementById('staticBackdrop'));
+      myModal.show();
+    };
+  </script>
 </body>
+
 </html>
