--- a/templates/player.html
+++ b/templates/player.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="h-100" data-bs-theme="dark">
+
 <head>
-    <meta charset="UTF-8">
-    <title>asdasd</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="" />
+    <title>ShuttleQ</title>
+
+    <link href="/static/bootstrap.min.css" rel="stylesheet" />
+    <meta name="theme-color" content="#712cf9" />
+    <link href="/static/cover.css" rel="stylesheet" />
 </head>
-<body>
-<h1>this is the players page for the room with id {{id}}</h1>
+
+<body class="d-flex h-100 text-bg-dark">
+
+    <div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        <header class="mb-auto">
+            <div>
+                <h3 class="float-md-start mb-0">ShuttleQ</h3>
+            </div>
+        </header>
+
+        <main class="px-3">
+            <h1 class="text-body-emphasis">Game Controls</h1>
+
+        </main>
+
+
+        <footer class="mt-auto text-white-50">
+            <p>
+                ShuttleQ
+            </p>
+        </footer>
+    </div>
+    <script src="/static/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>
 </body>
+
 </html>
