--- a/templates/admin.html
+++ b/templates/admin.html
@@ -272,6 +272,16 @@
         </script>
     </div>
     <script src="/static/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>
+    <script src="/static/socket.io.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        var socket = io({
+            auth: {
+                "authpass":"",
+                "room":"",
+                "type":"admin"
+            }
+        });
+    </script>
 </body>
 
 </html>
