--- a/templates/display.html
+++ b/templates/display.html
@@ -35,6 +35,16 @@
         </footer>
     </div>
     <script src="/static/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>
+    <script src="/static/socket.io.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        var socket = io({
+            auth: {
+                "authpass":"",
+                "room":"",
+                "type":"display"
+            }
+        });
+    </script>
 </body>
 
 </html>
