--- a/templates/player.html
+++ b/templates/player.html
@@ -34,6 +34,17 @@
         </footer>
     </div>
     <script src="/static/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>
+    <script src="/static/socket.io.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        var socket = io({
+            auth: {
+                "authpass":"",
+                "room":"",
+                "type":"player"
+            }
+        });
+    </script>
+
 </body>
 
 </html>
