--- a/templates/display.html
+++ b/templates/display.html
@@ -40,7 +40,7 @@
         var socket = io({
             auth: {
                 "authpass":"",
-                "room":"",
+                "room":"{{id}}",
                 "type":"display"
             }
         });
