--- a/templates/player.html
+++ b/templates/player.html
@@ -39,7 +39,7 @@
         var socket = io({
             auth: {
                 "authpass":"",
-                "room":"",
+                "room":"{{id}}",
                 "type":"player"
             }
         });
