--- a/templates/display.html
+++ b/templates/display.html
@@ -23,7 +23,7 @@
 
         <main class="px-3 text-center">
             <h2 class="text-body-emphasis">names game, james name</h1>
-            <h1 class="text-body-emphasis">Just imagine this is the score okay thank you</h1>
+                <h1 class="text-body-emphasis">Just imagine this is the score okay thank you</h1>
 
         </main>
 
@@ -35,15 +35,28 @@
         </footer>
     </div>
     <script src="/static/bootstrap.bundle.min.js" class="astro-vvvwv3sm"></script>
-    <script src="/static/socket.io.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        var socket = io({
-            auth: {
-                "authpass":"",
-                "room":"{{id}}",
-                "type":"display"
-            }
-        });
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyAIDxnW9upR-jWP62GiUVyaTsu6wnrv6bM",
+            authDomain: "shuttleq-jeffjeff9000.firebaseapp.com",
+            projectId: "shuttleq-jeffjeff9000",
+            storageBucket: "shuttleq-jeffjeff9000.firebasestorage.app",
+            messagingSenderId: "1021739347087",
+            appId: "1:1021739347087:web:8abd6ada44d6da533054fa",
+            measurementId: "G-YDNB4SJ0P6"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
     </script>
 </body>
 
